<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.debut.ellipsis.freehit.Stats.Rankings.RankingFragment">


    <include
        android:id="@+id/team_format_select"
        layout="@layout/custom_spinner_dark" />

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@id/team_format_select"
        android:paddingTop="@dimen/_8sdp"
        android:background="@color/ranking_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rank"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_13sdp"
            android:text="@string/rank"
            android:layout_weight="0.1"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/team"
            android:layout_width="@dimen/_135sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:text="@string/player_name"
            android:layout_weight="2.0"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/ratings"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:text="@string/ratings"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parent_layout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_list"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_1sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/night_background"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>