<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/_7sdp"
        app:cardElevation="@dimen/_12sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/title_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_75sdp"
                    android:background="?attr/updatebackground" />

                <TextView
                    android:id="@+id/update_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/update_available"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:padding="@dimen/_5sdp"
                    android:layout_centerHorizontal="true"
                    android:textColor="?attr/headingtext"
                    android:textSize="@dimen/_16sdp" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_below="@id/update_title"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/logo" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/changelog_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_layout"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingStart="@dimen/_12sdp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/changelog"
                    android:textAlignment="center"
                    android:textColor="?attr/textcolor"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/changelog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="?attr/secondarytextcolor"
                    android:textSize="@dimen/_12sdp"
                    tools:text="Some lines of changelog" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/changelog"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <Button
                        android:id="@+id/negativeBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:background="@drawable/alert_dialog_negative_button"
                        android:text="@string/close"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/positiveBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_weight="50"
                        android:background="@drawable/alert_dialog_positive_button"
                        android:text="@string/update"
                        android:textColor="#ffffff" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>