<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/country_select_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/country_flag"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_75sdp"
                tools:src="@drawable/matches_vector" />

            <TextView
                android:id="@+id/country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/slide_5_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slide5description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="@dimen/desc_padding"
                android:paddingRight="@dimen/desc_padding"
                android:text="@string/slide_5_desc"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:id="@+id/country_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/custom_button_intro"
                android:onClick="select_country"
                android:padding="@dimen/_5sdp"
                android:text="@string/select_team_button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/night_mode_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/country_select_linear_layout"
            android:padding="@dimen/_15sdp">

            <TextView
                android:id="@+id/night_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="NIGHT MODE"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_night_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/night_mode"
                android:paddingStart="@dimen/_10sdp"
                android:textAppearance="?android:textAppearanceSmall" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>