<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">

    <include
        android:id="@+id/custom_settings_toolbar"
        layout="@layout/common_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/custom_settings_toolbar"
        android:layout_marginBottom="2dip"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="?attr/backgroundcolor"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/country_select_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="@dimen/_15sdp">

                <TextView
                    android:id="@+id/title_country_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/team_select_title"
                    android:textColor="?attr/textcolor"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <RelativeLayout

                    android:id="@+id/relative_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_country_select"
                    android:layout_marginTop="@dimen/_12sdp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/country_flag"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        tools:src="@drawable/matches_vector" />

                    <TextView
                        android:id="@+id/country_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/country_flag"
                        android:textColor="?attr/textcolor"
                        android:textSize="@dimen/_18sdp"
                        tools:text="INDIA" />
                </RelativeLayout>

                <Button
                    android:id="@+id/country_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relative_layout"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_button"
                    android:onClick="select_country"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/select_team_button"
                    android:textColor="?attr/buttontextcolor"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_below="@+id/country_select"
                    android:background="@color/divider"
                    android:textSize="@dimen/_1sdp" />

                <TextView
                    android:id="@+id/title_country_select_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/country_select"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/select_team_s_for_notification"
                    android:textAllCaps="true"
                    android:textColor="?attr/textcolor"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <!--<TextView-->
                    <!--android:id="@+id/country_selected_notifications"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@id/title_country_select_notifications"-->
                    <!--android:layout_marginTop="@dimen/_10sdp"-->
                    <!--android:textColor="?attr/textcolor"-->
                    <!--android:textSize="@dimen/_15sdp"-->
                    <!--tools:text="No country selected" />-->

                <Button
                    android:id="@+id/country_select_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_country_select_notifications"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/custom_button"
                    android:onClick="select_country"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/select_countries"
                    android:textColor="?attr/buttontextcolor"
                    android:textSize="@dimen/_10sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/auto_refresh_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country_select_layout"
                android:layout_marginStart="@dimen/_15sdp">

                <TextView
                    android:id="@+id/auto_refresh_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/auto_refresh"
                    android:textAllCaps="true"
                    android:textColor="?attr/textcolor"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_auto_refresh_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/auto_refresh_mode"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/night_mode_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/auto_refresh_select"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:id="@+id/night_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/night_mode"
                    android:textColor="?attr/textcolor"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_night_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/night_mode"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingStart="@dimen/_10sdp" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <include
                    android:id="@+id/Unavailable_connection"
                    layout="@layout/no_internet_connection"
                    android:visibility="invisible" />
            </RelativeLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>